<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_star_black_24dp"
        android:src="@drawable/ic_star_black_24dp"
        app:showAsAction="always"
        app:actionViewClass="android.widget.ImageButton" />
    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"
        app:actionViewClass="android.widget.TextView" />
</menu>